<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/close_popup"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="right"
        android:gravity="center"
        android:text="@string/close_popup"
        android:textSize="18sp"
        android:layout_marginBottom="30dp"/>
    <TextView
        android:id="@+id/name_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Item"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp"
        android:layout_marginBottom="20dp"/>
    <EditText
        android:id="@+id/length_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="35dp"
        android:layout_marginBottom="20dp"/>

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="81dp"
        android:layout_marginBottom="20dp">
        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_item"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="81dp"
            android:textSize="23sp"
            android:layout_marginBottom="10dp" />
        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_item"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="113dp"
            android:textSize="23sp"/>
    </RadioGroup>

    <Button
        android:id="@+id/add_in_dock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_in_dock"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="145dp"
        android:textSize="16sp"
        android:layout_marginBottom="25dp"/>

    <Button
        android:id="@+id/locate_to_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locate_to_map"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="145dp"
        android:textSize="16sp"/>
</LinearLayout>