<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <EditText
        android:id="@+id/editTextBaseUrl"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        tools:layout_editor_absoluteX="126dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/editTextPathUrl"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_below="@+id/editTextBaseUrl"
        android:layout_centerHorizontal="true"
        tools:layout_editor_absoluteX="126dp"
        tools:layout_editor_absoluteY="62dp" />

    <TextView
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_alignBaseline="@+id/editTextPathUrl"
        android:layout_toStartOf="@+id/editTextBaseUrl"
        android:text="@string/path_url"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="64dp" />

    <TextView
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_alignBaseline="@+id/editTextBaseUrl"
        android:layout_toStartOf="@+id/editTextBaseUrl"
        android:text="@string/base_url"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <Button
        android:id="@+id/buttonSaveSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="128dp"
        android:text="@string/save" />
</RelativeLayout>